--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "트지직 - 트수 이주 환경 적응 지원 서비스",
 	"description": "트수들의 치지직 환경으로의 이주와 적응을 도와주는, 맞춤형 디지털 이주 지원 확장프로그램",
-	"version": "1.5.5",
+	"version": "1.6.0",
 	"manifest_version": 3,
 	"action": {
 		"default_icon": {
@@ -13,14 +13,23 @@
 		}
 	},
 	"icons": {
-	   "128": "/images/128.png",
-	   "16": "/images/16.png",
-	   "48": "/images/48.png"
+		"128": "/images/128.png",
+		"16": "/images/16.png",
+		"48": "/images/48.png"
 	},
-	"content_scripts":[{
-		"run_at": "document_idle",
-		"matches": ["http://*.chzzk.naver.com/*","https://*.chzzk.naver.com/*"],
-		"css": ["style.css"],
-		"js": ["script.js"]
-	}]
+	"content_scripts": [
+		{
+			"run_at": "document_idle",
+			"matches": [
+				"http://*.chzzk.naver.com/*",
+				"https://*.chzzk.naver.com/*"
+			],
+			"css": [
+				"style.css"
+			],
+			"js": [
+				"script.js"
+			]
+		}
+	]
 }
